[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvstore = { path = "../kvstore" }
common = { path = "../common" }
noler = { path = "../noler" }

stateright = "0.30"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
clap = "3.0"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
pico-args = "0.4"
num_cpus = "1.16"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "paxos"
path = "src/paxos.rs"

[[bin]]
name = "noler"
path = "src/noler.rs"

[[bin]]
name = "nolerops"
path = "src/noleropsr.rs"