[package]
name = "noler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvstore = { path = "../kvstore" }
common = { path = "../common" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
rand = "0.8.5"
clap = "3.0"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
zipf = "7.0"
rand_distr = "0.4.3"
#sha2 = "0.9"

env_logger = "0.7"
stateright = "0.30"

log = "0.4"

pico-args = "0.4"
num_cpus = "1.16"

bincode = "1.3"

[[bin]]
name = "noler"
path = "src/replica.rs"

[[bin]]
name = "noler-client"
path = "src/client.rs"
