[package]
name = "paxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvstore = { path = "../kvstore" }
common = { path = "../common" }

tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = "3.0"
tonic = "0.9"
prost = "0.11"
log = "0.4"

#binaries
[[bin]]
name = "client_test"
path = "src/client_test.rs"

[[bin]]
name = "paxos-server"
path = "src/main.rs"

[[bin]]
name = "paxos-client"
path = "src/client.rs"

[build-dependencies]